--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
